2009-12-09  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#137235 - Transparent menu corners

	* matchbox/client-types/mb-wm-client-menu.c: Create decor for menus, 
	  deal with decor when working out sizes.
	* matchbox/theme-engines/mb-wm-theme-xml.c/h: Add image_filename field
	  into decor
	* matchbox/theme-engines/mb-wm-theme.c: handle loading of img as an
	  XML entity in 'Client', and sort out paths.	

2009-12-04  Gordon Williams <gordon.williams@collabora.co.uk>

	Release 0.2.84

	NB#149340 - Task switcher window thumbnail quality
	            Requires hildon-desktop mods too.
	
	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Now detect the presence 
	of "FILTER_LINEAR" data in the parent clutter object, and adjust
	filter preferences accordingly.

2009-11-30  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.83

2009-11-24  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Fix problems in the focus logic.

	* matchbox/core/mb-window-manager.h: New member focus_after_stacking
	to flag when we have postponed assigning the focus to happen after
	stacking.
	* matchbox/core/mb-window-manager.c (mb_wm_focus_client_as_stacked):
	Refactored the 'focus as stacked' logic here out from
	mb_wm_unfocus_client.
	(mb_wm_manage_preexisting_wins): Set the focus_after_stacking flag to
	assign focus to the right place after stacking.
	(mb_wm_focus_client): If the client is unrealized, assume it's not
	stacked yet and set focus_after_stacking to check focus later.
	* matchbox/core/mb-wm-client.c (mb_wm_client_needs_stack_sync): Remove
	unused function.

2009-11-23  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Fixes: NB#145690 - Application manager finishing an installation in
	background blocks keyboard input in Terminal

	* matchbox/core/mb-window-manager.c (mb_wm_focus_client): If the
	window is not realized (i.e. it has just appeared), focus according to
	the stacking order.
	(mb_wm_sync): Don't compile the timer code if we have G_DEBUG_DISABLE.
