@@ -3,7 +3,8 @@
 	Fixes: NB#137235 - Transparent menu corners
 
 	* matchbox/client-types/mb-wm-client-menu.c: Create decor for menus, 
-	  deal with decor when working out sizes.
+	  deal with decor when working out sizes. Actually call the parent
+	  class's realize function, and fix broken reparenting code.
 	* matchbox/theme-engines/mb-wm-theme-xml.c/h: Add image_filename field
 	  into decor
 	* matchbox/theme-engines/mb-wm-theme.c: handle loading of img as an
